Remove solr modules, update java 9 module comments (fixed some leaving some ignored such as anything spark related)